[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxium"
version = "2.0.0"
description = "A fast, modern HTTP client for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Siddhant Bayas"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx[http2]>=0.27.0,<1",
    "idna>=3.4,<4",
    "chardet>=5.0,<6",
    "brotli>=1.1.0,<2",
]

[project.optional-dependencies]
socks = ["httpx-socks>=0.7,<1"]
uvloop = ["uvloop>=0.19,<1"]
cache = ["hishel>=0.1,<1"]
all = [
    "httpx-socks>=0.7,<1",
    "uvloop>=0.19,<1",
    "hishel>=0.1,<1",
]
test = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=6.0,<7",
    "respx>=0.21,<1",
    "psutil>=5.9,<6",
]
lint = [
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]
dev = [
    "fluxium[test,lint,all]",
]

[project.urls]
Homepage = "https://github.com/siddhant-bayas/fluxium"
Documentation = "https://github.com/siddhant-bayas/fluxium"
Repository = "https://github.com/siddhant-bayas/fluxium"

[tool.setuptools.packages.find]
include = ["fluxium*"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["__pycache__", "dist", ".eggs", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in defaults
    "RUF001", # ambiguous chars in strings (false positives)
    "SIM102", # nested if — sometimes clearer
    "SIM105", # try-except-pass — sometimes intentional
    "SIM108", # ternary — sometimes less readable
    "RUF034", # useless if-else — sometimes clearer
    "B904",   # raise from — not always needed in except chains
]

[tool.ruff.lint.isort]
known-first-party = ["fluxium"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "S101", "E712", "F401", "F811", "F841", "B028", "RUF059", "UP028", "B017"]
"benchmark/*" = ["B011", "S101", "E712"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["httpx.*", "hishel.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"